OAK-11462: Remove usage of Guava Files.write() (#2059)
* OAK-11462: Remove usage of Guava Files.write() -  oak-core

* OAK-11462: Remove usage of Guava Files.write() -  oak-run

* OAK-11462: Remove usage of Guava Files.write() -  oak-upgrade

* OAK-11462: Remove usage of Guava Files.write() - whitespace fixed