@@ -19,10 +19,9 @@
 package org.apache.jackrabbit.oak.plugins.tika;
 
 import java.io.File;
-import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.Map;
 
-import org.apache.jackrabbit.guava.common.io.Files;
 import org.apache.commons.csv.CSVPrinter;
 import org.apache.jackrabbit.oak.spi.blob.MemoryBlobStore;
 import org.junit.Rule;
@@ -47,7 +46,7 @@ public class CSVFileBinaryResourceProviderTest {
         p.printRecord(null, null, "text/plain", null, "/c");
 
         File dataFile = temporaryFolder.newFile();
-        Files.write(sb, dataFile, StandardCharsets.UTF_8);
+        Files.writeString(dataFile.toPath(), sb);
 
         CSVFileBinaryResourceProvider provider = new CSVFileBinaryResourceProvider(dataFile, new MemoryBlobStore());
 
